Add dragAndDrop text to `TextBoxSource`